{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 91,
  "lineage": "8475a7b1-6f9f-9026-b09f-a5e2f29cbe50",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891376943289:internet-gateway/igw-00dcef626707dbd64",
            "id": "igw-00dcef626707dbd64",
            "owner_id": "891376943289",
            "region": "us-west-2",
            "tags": {
              "Name": "petxref-prod-igw"
            },
            "tags_all": {
              "Name": "petxref-prod-igw"
            },
            "vpc_id": "vpc-046e2602f1c41120d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_inet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00dcef626707dbd64",
            "id": "r-rtb-0ef794ba3c8ae65451080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0ef794ba3c8ae6545",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891376943289",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-0ef794ba3c8ae6545"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891376943289:route-table/rtb-035e10e57f50b099e",
            "id": "rtb-035e10e57f50b099e",
            "owner_id": "891376943289",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "Name": "petxref-prod-private-rt"
            },
            "tags_all": {
              "Name": "petxref-prod-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-046e2602f1c41120d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891376943289",
            "id": "rtb-035e10e57f50b099e",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891376943289:route-table/rtb-0ef794ba3c8ae6545",
            "id": "rtb-0ef794ba3c8ae6545",
            "owner_id": "891376943289",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00dcef626707dbd64",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "petxref-prod-public-rt"
            },
            "tags_all": {
              "Name": "petxref-prod-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-046e2602f1c41120d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891376943289",
            "id": "rtb-0ef794ba3c8ae6545",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af0c13d19ada03d6",
            "region": "us-west-2",
            "route_table_id": "rtb-035e10e57f50b099e",
            "subnet_id": "subnet-0639eba84ecdfd150"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7b11ca5b3c3d854",
            "region": "us-west-2",
            "route_table_id": "rtb-035e10e57f50b099e",
            "subnet_id": "subnet-0d062776305df6416"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb1bb138a4081569",
            "region": "us-west-2",
            "route_table_id": "rtb-0ef794ba3c8ae6545",
            "subnet_id": "subnet-03fef0a460ef00ad8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0483bbbbcc26893b1",
            "region": "us-west-2",
            "route_table_id": "rtb-0ef794ba3c8ae6545",
            "subnet_id": "subnet-0227f8638533ca783"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891376943289:security-group/sg-0578f4919fe8b4d3c",
            "description": "Aurora security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0578f4919fe8b4d3c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from Lambda",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-014da26101fb2acd6"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "petxref-prod-db-sg",
            "name_prefix": "",
            "owner_id": "891376943289",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petxref-prod-db-sg"
            },
            "tags_all": {
              "Name": "petxref-prod-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-046e2602f1c41120d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891376943289",
            "id": "sg-0578f4919fe8b4d3c",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891376943289:security-group/sg-014da26101fb2acd6",
            "description": "Lambda security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-014da26101fb2acd6",
            "ingress": [],
            "name": "petxref-prod-lambda-sg",
            "name_prefix": "",
            "owner_id": "891376943289",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petxref-prod-lambda-sg"
            },
            "tags_all": {
              "Name": "petxref-prod-lambda-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-046e2602f1c41120d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891376943289",
            "id": "sg-014da26101fb2acd6",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891376943289:security-group/sg-07e2d82bbf194f996",
            "description": "VPC endpoint security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e2d82bbf194f996",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS from Lambda",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-014da26101fb2acd6"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "petxref-prod-vpce-sg",
            "name_prefix": "",
            "owner_id": "891376943289",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-046e2602f1c41120d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891376943289",
            "id": "sg-07e2d82bbf194f996",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891376943289:subnet/subnet-0639eba84ecdfd150",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.20.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0639eba84ecdfd150",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891376943289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "petxref-prod-private-0"
            },
            "tags_all": {
              "Name": "petxref-prod-private-0"
            },
            "vpc_id": "vpc-046e2602f1c41120d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891376943289",
            "id": "subnet-0639eba84ecdfd150",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891376943289:subnet/subnet-0d062776305df6416",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.20.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d062776305df6416",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891376943289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "petxref-prod-private-1"
            },
            "tags_all": {
              "Name": "petxref-prod-private-1"
            },
            "vpc_id": "vpc-046e2602f1c41120d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891376943289",
            "id": "subnet-0d062776305df6416",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891376943289:subnet/subnet-03fef0a460ef00ad8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.20.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fef0a460ef00ad8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891376943289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "petxref-prod-public-0"
            },
            "tags_all": {
              "Name": "petxref-prod-public-0"
            },
            "vpc_id": "vpc-046e2602f1c41120d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891376943289",
            "id": "subnet-03fef0a460ef00ad8",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891376943289:subnet/subnet-0227f8638533ca783",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0227f8638533ca783",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891376943289",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "petxref-prod-public-1"
            },
            "tags_all": {
              "Name": "petxref-prod-public-1"
            },
            "vpc_id": "vpc-046e2602f1c41120d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891376943289",
            "id": "subnet-0227f8638533ca783",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891376943289:vpc/vpc-046e2602f1c41120d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0e33d0c0277f30abd",
            "default_route_table_id": "rtb-012bb1017348fa2d0",
            "default_security_group_id": "sg-0ab877470f52b82f4",
            "dhcp_options_id": "dopt-032d8d4dcc71d3c84",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-046e2602f1c41120d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-012bb1017348fa2d0",
            "owner_id": "891376943289",
            "region": "us-west-2",
            "tags": {
              "Name": "petxref-prod-vpc"
            },
            "tags_all": {
              "Name": "petxref-prod-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891376943289",
            "id": "vpc-046e2602f1c41120d",
            "region": "us-west-2"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891376943289:vpc-endpoint/vpce-08e19e7392768dd2f",
            "dns_entry": [
              {
                "dns_name": "vpce-08e19e7392768dd2f-8vr0bc26.secretsmanager.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-08e19e7392768dd2f-8vr0bc26-us-west-2b.secretsmanager.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-08e19e7392768dd2f-8vr0bc26-us-west-2a.secretsmanager.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "secretsmanager.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z046899136SDJSQQRADEW"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08e19e7392768dd2f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0610152085a71604b",
              "eni-07f0bfd6e095e3288"
            ],
            "owner_id": "891376943289",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-west-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-07e2d82bbf194f996"
            ],
            "service_name": "com.amazonaws.us-west-2.secretsmanager",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.100.218",
                "subnet_id": "subnet-0639eba84ecdfd150"
              },
              {
                "ipv4": "10.20.101.101",
                "subnet_id": "subnet-0d062776305df6416"
              }
            ],
            "subnet_ids": [
              "subnet-0639eba84ecdfd150",
              "subnet-0d062776305df6416"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-046e2602f1c41120d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891376943289",
            "id": "vpce-08e19e7392768dd2f",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_security_group.vpce_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}